# FinQuest

./: README.md  render.yaml
app/services/api/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
app/services/api/examples/: llm_service_example.py
app/services/api/migrations/: 001_add_gamification_tables.sql
app/services/api/scripts/: seed_badges.py
app/services/api/src/finquest_api/: __init__.py  auth_utils.py  config.py  main.py  schemas.py  supabase_client.py
app/services/api/src/finquest_api/db/: __init__.py  models.py  session.py
app/services/api/src/finquest_api/jobs/: __init__.py  snapshots.py
app/services/api/src/finquest_api/routers/: api.py  auth.py  gamification.py  health.py  modules.py  portfolio.py  users.py
app/services/api/src/finquest_api/services/: __init__.py  fx.py  gamification.py  instruments.py  module_generator.py  portfolio.py  pricing.py  suggestion_generator.py
app/services/api/src/finquest_api/services/llm/: __init__.py  client_base.py  dependencies.py  factory.py  models.py  service.py  utils.py
app/services/api/src/finquest_api/services/llm/providers/: gemini.py  (+2 more)
app/services/api/tests/: __init__.py  conftest.py  test_api_router.py  test_auth.py  test_auth_router.py  test_auth_router_missing.py  test_auth_utils.py  test_config.py  test_db_session.py  test_gamification_router.py  test_gamification_router_extended.py  test_gamification_router_missing_line.py  test_gamification_service_missing.py  test_health.py  test_init.py  test_modules_router.py  test_modules_router_attempt_extended.py  test_modules_router_extended.py  test_portfolio_router.py  test_portfolio_router_missing.py  test_users_router.py  test_users_router_extended.py
app/services/api/tests/services/: test_fx.py  test_fx_extended.py  test_gamification_service.py  test_gemini_provider.py  test_gemini_provider_extended.py  test_instruments.py  test_llm_dependencies.py  test_llm_factory.py  test_llm_service.py  test_llm_service_extended.py  test_llm_utils.py  test_openai_provider.py  test_openai_provider_extended.py  test_portfolio_service.py  test_pricing.py
(+149 files in other folders)
